--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "joi": "^17.5.0",
     "knex": "^0.95.14",
     "mysql": "^2.18.1"
   },
